--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Run Tests
       run: |
         cd src/
-        python manage.py test
+        python manage.py test apps/user
